--- a/src/app/cliente/deposita/deposita.component.html
+++ b/src/app/cliente/deposita/deposita.component.html
@@ -6,48 +6,45 @@
     <title>Document</title>
 </head>
 <body>
-  <div>
-    <h4>Depositar - Conta: {{conta.id}}</h4>
-  </div>
-  
-  <div>
-    <h4>Saldo:
-      <span [style.color]="conta.saldo! >= 0 ? 'green': 'red'">{{ conta.saldo | currency: "BRL"}}</span>
-    </h4>
-  </div>
-  
-  <div>
-    <form #formDepositar="ngForm">
-      <!-- Seu formulário de depósito -->
-    </form>
-  </div>
-  
-  <div>
-    <h3>Transações:</h3>
-    <ul>
-      <li *ngFor="let transacao of conta.movimentacao">
-        {{ transacao.dataHora | date: 'dd/MM/yyyy HH:mm:ss' }} - Tipo: {{ transacao.type }} - Valor: {{ transacao.value | currency: "BRL" }}
-      </li>
-    </ul>
-  </div>
+  <div *ngIf="conta">
+    <div>
+      <h4>Depositar - Conta: {{conta.id}}</h4>
+    </div>
+    
+    <div>
+      <h4>Saldo:
+        <span [style.color]="conta.saldo! >= 0 ? 'green': 'red'">{{ conta.saldo | currency: "BRL"}}</span>
+      </h4>
+    </div>
 
     <div>
+      <h3>Transações:</h3>
+      <ul>
+        <li *ngFor="let transacao of conta.movimentacao">
+          {{ transacao.dataHora | date: 'dd/MM/yyyy HH:mm:ss' }} - Tipo: {{ transacao.type }} - Valor: {{ transacao.value | currency: "BRL" }}
+        </li>
+      </ul>
+    </div>
+
+      <div>
         <form #formDepositar="ngForm">
           <div>
             <label for="valor">Valor:</label>
-            <input type="text" id="valor" name="valor" currencyMask  required [(ngModel)]="valorDeposito" />
+            <input type="text" id="valor" name="valor" currencyMask  [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required [(ngModel)]="valorDeposito"  />
           </div>
           <div >
             <button type="button"  style="margin-right: 10px" (click)="depositar()"
               [disabled]="!formDepositar.form.valid">
             Confirmar
             </button>
+            <button (click)="getConta()">pega conta</button>
             <a [routerLink]="['']">
               Voltar
             </a>
           </div>
         </form>
       </div>
+  </div>
 
 </body>
 </html>
