--- a/src/app/cliente/altera-perfil/altera-perfil.component.html
+++ b/src/app/cliente/altera-perfil/altera-perfil.component.html
@@ -9,19 +9,20 @@
 
 <body>
     <div>
-        <h2>Autocadastro de Cliente</h2>
-        <form (ngSubmit)="cadastrarCliente()" #formCadastrar="ngForm">
+        <h2>Alterar Perfil</h2>
+        <form (ngSubmit)="alterarCliente()" #formCadastrar="ngForm">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" [(ngModel)]="cliente.nome" required>
+            <br>
+            <label for="gerente">Gerente da conta:</label>
+            <!-- <span [(ngModel)]="gerente.nome">{{gerente.nome}}</span>-->
             <br>
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" [(ngModel)]="cliente.email" required>
             <br>
             <label for="cpf">CPF:</label>
             <input type="text" id="cpf" name="cpf" [(ngModel)]="cliente.cpf" placeholder="999.999.999-99" maxlength="14"
-                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required appCpfFormat />
-            <button type="button" (click)="verificarCPF()">Verificar CPF</button>
-            <p *ngIf="mensagemCPF" [style.color]="cpfValido ? 'green' : 'red'">{{ mensagemCPF }}</p>
+                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" [disabled]="true" required appCpfFormat />
             <br>
             <label for="telefone">Telefone:</label>
             <input type="text" id="telefone" name="telefone" [(ngModel)]="cliente.telefone"
@@ -34,12 +35,10 @@
             <button type="button" (click)="buscarEndereco()">Buscar CEP</button>
             <br>
             <label for="enderecoTipo">Tipo de Endereço:</label>
-            <input type="text" id="enderecoTipo" name="enderecoTipo" 
-                [(ngModel)]="cliente.endereco.tipo">
+            <input type="text" id="enderecoTipo" name="enderecoTipo" [(ngModel)]="cliente.endereco.tipo">
             <br>
             <label for="logradouro">Logradouro:</label>
-            <input type="text" id="logradouro" name="logradouro" 
-                [(ngModel)]="cliente.endereco.logradouro">
+            <input type="text" id="logradouro" name="logradouro" [(ngModel)]="cliente.endereco.logradouro">
             <br>
             <label for="numero">Número:</label>
             <input type="text" id="numero" name="numero" required [(ngModel)]="cliente.endereco.numero">
@@ -48,7 +47,7 @@
             <input type="text" id="complemento" name="complemento" [(ngModel)]="cliente.endereco.complemento">
             <br>
             <label for="cidade">Cidade:</label>
-            <input type="text" id="cidade" name="cidade"  [(ngModel)]="cliente.endereco.cidade">
+            <input type="text" id="cidade" name="cidade" [(ngModel)]="cliente.endereco.cidade">
             <br>
             <label for="estado">Estado:</label>
             <input type="text" id="estado" name="estado" [(ngModel)]="cliente.endereco.estado">
@@ -57,7 +56,7 @@
             <input type="text" id="salario" currencyMask name="salario" [(ngModel)]="cliente.salario"
                 [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required>
             <br>
-            <button type="submit" [disabled]="!formCadastrar.valid || !cpfValido">Cadastrar</button>
+            <button type="submit" [disabled]="!formCadastrar.valid">Cadastrar</button>
             <button routerLink="/">Voltar para a Home</button>
         </form>
         <p>{{ mensagem }}</p>
