--- a/src/app/cliente/home-cliente/home-cliente.component.html
+++ b/src/app/cliente/home-cliente/home-cliente.component.html
@@ -7,6 +7,7 @@
     <button routerLink="/depositar">Depositar</button>
     <button routerLink="/sacar">Saque</button>
     <button routerLink="/transf">Transferência</button>
+    <button routerLink="/alterarperfil">Alterar Perfil</button>
   </div>
   
 
