feat: inserir-gerente component, shared-module. refact: directives.

--- a/src/app/admin/home-admin/home-admin.component.html
+++ b/src/app/admin/home-admin/home-admin.component.html
@@ -1,5 +1,6 @@
 <p>home-admin works!</p>
 <div *ngIf="verifyLogin(); else erro">
+    <button routerLink="/inserir-gerente">Inserir Novo Gerente</button>
     <div>
         <table>
             <thead>
