feature: manutencao-gerente, alterar-gerente. refact: home-admin, inserir-gerente, admin.service

--- a/src/app/admin/home-admin/home-admin.component.html
+++ b/src/app/admin/home-admin/home-admin.component.html
@@ -1,6 +1,7 @@
 <p>home-admin works!</p>
 <div *ngIf="verifyLogin(); else erro">
     <button routerLink="/inserir-gerente">Inserir Novo Gerente</button>
+    <button routerLink="/manutencao-admin">Manutenção Gerentes</button>
     <div>
         <table>
             <thead>
