--- a/src/app/admin/home-admin/home-admin.component.html
+++ b/src/app/admin/home-admin/home-admin.component.html
@@ -2,6 +2,7 @@
 <div *ngIf="verifyLogin(); else erro">
     <button routerLink="/inserir-gerente">Inserir Novo Gerente</button>
     <button routerLink="/manutencao-admin">Manutenção Gerentes</button>
+    <button routerLink="/relatorio-clientes">Relatório de Clientes</button>
     <div>
         <table>
             <thead>
