--- a/src/app/gerente/home-gerente/home-gerente.component.html
+++ b/src/app/gerente/home-gerente/home-gerente.component.html
@@ -1,7 +1,7 @@
 
 
 <div>
-  <button routerLink= "/lista-clientes">Clientes</button>
+  <button routerLink="/lista-clientes">lista-clientes</button>
     <div> <!-- aqui sera a lista de cliente   -->
         <table>
             <thead>
