--- a/src/app/cliente/transf/transf.component.html
+++ b/src/app/cliente/transf/transf.component.html
@@ -20,7 +20,7 @@
         <form #formDepositar="ngForm">
           <div>
             <label for="valor">Valor:</label>
-            <input type="text" id="valor" name="valor" currencyMask required [(ngModel)]="valorDeposito" />
+            <input type="text" id="valor" name="valor" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" currencyMask required [(ngModel)]="valorDeposito" />
           </div>
           <div >
             <button type="button"  style="margin-right: 10px" (click)="transferir()"
