--- a/src/app/admin/inserir-gerente/inserir-gerente.component.html
+++ b/src/app/admin/inserir-gerente/inserir-gerente.component.html
@@ -18,8 +18,8 @@
                 <br>
                 <label for="CPF">CPF</label>
                 <input type="text" id="cpf" name="cpf" [(ngModel)]="gerente.cpf" placeholder="999.999.999-99" maxlength="14"
-                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" appCpfFormat required>
-                <button type="button" (click)="verificarCPF()">Verificar CPF</button>
+                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" appCpfFormat (ngModelChange)="resetarValidacaoCPF()" required>
+                <button type="button" (click)="verificarCPF()" >Verificar CPF</button>
                 <p *ngIf="mensagemCPF" [style.color]="isCpfValido ? 'green' : 'red'">{{ mensagemCPF }}</p>
                 <br>
                 <label for="email">Email do Gerente:</label>
