--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -12,14 +12,14 @@
         <h2>Autocadastro de Cliente</h2>
         <form (ngSubmit)="cadastrarCliente()" #formCadastrar="ngForm">
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" [(ngModel)]="cliente.nome" required>
+            <input type="text" id="nome" name="nome" [(ngModel)]="cliente.nome"  required>
             <br>
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" [(ngModel)]="cliente.email" required>
             <br>
             <label for="cpf">CPF:</label>
             <input type="text" id="cpf" name="cpf" [(ngModel)]="cliente.cpf" placeholder="999.999.999-99" maxlength="14"
-                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required appCpfFormat />
+                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required appCpfFormat (ngModelChange)="resetarValidacaoCPF()"/>
             <button type="button" (click)="verificarCPF()">Verificar CPF</button>
             <p *ngIf="mensagemCPF" [style.color]="cpfValido ? 'green' : 'red'">{{ mensagemCPF }}</p>
             <br>
@@ -35,29 +35,29 @@
             <br>
             <label for="enderecoTipo">Tipo de Endereço:</label>
             <input type="text" id="enderecoTipo" name="enderecoTipo" 
-                [(ngModel)]="cliente.endereco.tipo">
+                [(ngModel)]="cliente.endereco.tipo" [disabled]="!isCepSet">
             <br>
             <label for="logradouro">Logradouro:</label>
             <input type="text" id="logradouro" name="logradouro" 
-                [(ngModel)]="cliente.endereco.logradouro">
+                [(ngModel)]="cliente.endereco.logradouro" [disabled]="!isCepSet">
             <br>
             <label for="numero">Número:</label>
-            <input type="text" id="numero" name="numero" required [(ngModel)]="cliente.endereco.numero">
+            <input type="text" id="numero" name="numero" required [(ngModel)]="cliente.endereco.numero" [disabled]="!isCepSet">
             <br>
             <label for="complemento">Complemento:</label>
-            <input type="text" id="complemento" name="complemento" [(ngModel)]="cliente.endereco.complemento">
+            <input type="text" id="complemento" name="complemento" [(ngModel)]="cliente.endereco.complemento" [disabled]="!isCepSet">
             <br>
             <label for="cidade">Cidade:</label>
-            <input type="text" id="cidade" name="cidade"  [(ngModel)]="cliente.endereco.cidade">
+            <input type="text" id="cidade" name="cidade"  [(ngModel)]="cliente.endereco.cidade" [disabled]="!isCepSet">
             <br>
             <label for="estado">Estado:</label>
-            <input type="text" id="estado" name="estado" [(ngModel)]="cliente.endereco.estado">
+            <input type="text" id="estado" name="estado" [(ngModel)]="cliente.endereco.estado" [disabled]="!isCepSet">
             <br>
             <label for="salario">Salário:</label>
             <input type="text" id="salario" currencyMask name="salario" [(ngModel)]="cliente.salario"
                 [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required>
             <br>
-            <button type="submit" [disabled]="!formCadastrar.valid || !cpfValido">Cadastrar</button>
+            <button type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario <= 0">Cadastrar</button>
             <button routerLink="/">Voltar para a Home</button>
         </form>
         <p>{{ mensagem }}</p>
