--- a/src/app/cliente/home-cliente/home-cliente.component.html
+++ b/src/app/cliente/home-cliente/home-cliente.component.html
@@ -1,14 +1,7 @@
-
-
-<p>home-cliente works!</p>
-
-
-<div>
-  <button routerLink="/depositar">Depositar</button>
-  <button routerLink="/sacar">Saque</button>
-  <button routerLink="/transf">Transferência</button>
-  <button routerLink="/alterarperfil">Alterar Perfil</button>
-  <button (click)="userLogado()">User</button>
+<div class="container text-center mt-5">
+  <div class="container text-center mt-5">
+    <h1 class="display-4">Bem-Vindo ao Bantads</h1>
+    <p class="lead">O piorzinho que tá tendo ai</p>
+    <hr class="my-4">
 </div>
-  
-
+</div>
