--- a/src/app/gerente/home-gerente/home-gerente.component.html
+++ b/src/app/gerente/home-gerente/home-gerente.component.html
@@ -1,7 +1,9 @@
 
 
 <div>
-  <button routerLink="/lista-clientes">lista-clientes</button>
+  <button routerLink="/lista-clientes">Lista Clientes</button>
+  <button routerLink="/pesquisar-cliente">Procurar Cliente</button>
+  <button routerLink="/melhores-clientes">Os Tops</button>
     <div> <!-- aqui sera a lista de cliente   -->
         <table>
             <thead>
