--- a/src/app/cliente/saque/saque.component.html
+++ b/src/app/cliente/saque/saque.component.html
@@ -1,44 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="container d-flex justify-content-center mt-5">
+  <div *ngIf="conta" style="width: 300px;" class="saque">
+    <h1 class="box-title">Saque</h1>
+    <h5>Conta: {{conta.id}}</h5>
+    <h6>Saldo:
+      <span [style.color]="conta.saldo! >= 0 ? 'green': 'red'">{{ conta.saldo | currency: "BRL"}}</span>
+    </h6>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saque</title>
-</head>
-
-<body>
-  <div *ngIf="conta" class="wrapper">
-    <div>
-      <h4 class="box-title">Saque</h4>
-      <h4> Número da Conta: {{conta.id}}</h4> asdasdas
-    </div>
-    <div>
-      <h4>Saldo:
-        <span [style.color]="conta.saldo! >= 0 ? 'green': 'red'">{{ conta.saldo | currency: "BRL"}}</span>
-      </h4>
-    </div>
-
-    <div>
-      <form #formSacar="ngForm">
-        <div>
-          <label for="valor">Valor:</label>
-          <input type="text" #valor id="valor" name="valor" currencyMask  [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required [(ngModel)]="valorSaque"  />
+    <form #formSacar="ngForm">
+     
+      <div class="form-group">
+        <label for="valor">informe o valor do saque:</label>
+        <input type="text"  placeholder="R$ 0,00" class="form-control" #valor="ngModel" id="valor" name="valor" currencyMask  [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required [(ngModel)]="valorSaque"  />
+        <div *ngIf="valor.errors && (valor.dirty || valor.touched)" class="mt-2 alert alert-danger">
+          <div [hidden]="!valor.errors?.['required']"> Digite um valor para deposito.</div>
         </div>
-        <div >
-          <button type="button"  class="btn-confirm" (click)="sacar()"
+      </div>
+
+      <div class="form-group mt-5 d-flex justify-content-center">
+        <a class="btn btn-secondary me-3" href="#" routerLink="">
+          Voltar
+        </a>
+        <button type="button" class="btn btn-primary" (click)="sacar()"
             [disabled]="!formSacar.form.valid || valorSaque <= 0  || !isValidValue() ">
           Confirmar
-          </button>
-          <button class="btn-back" type="button"><a [routerLink]="['']">
-            Voltar
-          </a>
         </button>
-        </div>
-      </form>
+      </div>
+    </form>
+  </div>
+  <div *ngIf="!conta">
+    <div class="d-flex align-items-center">
+      <strong role="status">
+        <div class="spinner-border ms-3" style="width: 3rem; height: 3rem;" aria-hidden="true"></div>
+      </strong>
     </div>
   </div>
-
-</body>
-
-</html>
+</div>
