--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -1,67 +1,99 @@
-<!DOCTYPE html>
-<html lang="en">
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5">
+                <form (ngSubmit)="cadastrarCliente()" #formCadastrar="ngForm">
+                    <div class="mb-md-1 mt-md-1 pb-2">
+                        <h2 class="fw-bold mb-2">BANTADS - Registrar-se</h2>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-</head>
+                        <div class="form-outline form-white mb-3">
+                            <label class="form-label" for="nome">Nome</label>
+                            <input class="form-control" placeholder="Nome" type="text" id="nome" name="nome" [(ngModel)]="cliente.nome"  required>
+                        </div>
 
-<body>
-    <div>
-        <h2>Autocadastro de Cliente</h2>
-        <form (ngSubmit)="cadastrarCliente()" #formCadastrar="ngForm">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" [(ngModel)]="cliente.nome"  required>
-            <br>
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" [(ngModel)]="cliente.email" required>
-            <br>
-            <label for="cpf">CPF:</label>
-            <input type="text" id="cpf" name="cpf" [(ngModel)]="cliente.cpf" placeholder="999.999.999-99" maxlength="14"
-                pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required appCpfFormat (ngModelChange)="resetarValidacaoCPF()"/>
-            <button type="button" (click)="verificarCPF()">Verificar CPF</button>
-            <p *ngIf="mensagemCPF" [style.color]="cpfValido ? 'green' : 'red'">{{ mensagemCPF }}</p>
-            <br>
-            <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone" name="telefone" [(ngModel)]="cliente.telefone"
-                placeholder="(00) 00000-0000" maxlength="15" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" required
-                appTelefoneFormat />
-            <br>
-            <label for="cep">CEP:</label>
-            <input type="text" id="cep" name="cep" [(ngModel)]="cliente.endereco.cep" placeholder="99999-999"
-                maxlength="9" appCepFormat required>
-            <button type="button" (click)="buscarEndereco()">Buscar CEP</button>
-            <br>
-            <label for="enderecoTipo">Tipo de Endereço:</label>
-            <input type="text" id="enderecoTipo" name="enderecoTipo" 
-                [(ngModel)]="cliente.endereco.tipo" [disabled]="!isCepSet">
-            <br>
-            <label for="logradouro">Logradouro:</label>
-            <input type="text" id="logradouro" name="logradouro" 
-                [(ngModel)]="cliente.endereco.logradouro" [disabled]="!isCepSet">
-            <br>
-            <label for="numero">Número:</label>
-            <input type="text" id="numero" name="numero" required [(ngModel)]="cliente.endereco.numero" [disabled]="!isCepSet">
-            <br>
-            <label for="complemento">Complemento:</label>
-            <input type="text" id="complemento" name="complemento" [(ngModel)]="cliente.endereco.complemento" [disabled]="!isCepSet">
-            <br>
-            <label for="cidade">Cidade:</label>
-            <input type="text" id="cidade" name="cidade"  [(ngModel)]="cliente.endereco.cidade" [disabled]="!isCepSet">
-            <br>
-            <label for="estado">Estado:</label>
-            <input type="text" id="estado" name="estado" [(ngModel)]="cliente.endereco.estado" [disabled]="!isCepSet">
-            <br>
-            <label for="salario">Salário:</label>
-            <input type="text" id="salario" currencyMask name="salario" [(ngModel)]="cliente.salario"
-                [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required>
-            <br>
-            <button type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario <= 0">Cadastrar</button>
-            <button routerLink="/">Voltar para a Home</button>
-        </form>
-        <p>{{ mensagem }}</p>
+                        <div class="form-outline form-white mb-3">
+                            <label class="form-label" for="email">E-mail</label>
+                            <input class="form-control" placeholder="E-mail" type="email" id="email" name="email" [(ngModel)]="cliente.email" required>
+                        </div>
+        
+                        <div class="form-outline form-white mb-3">
+                            <label class="form-label" for="cpf">CPF</label>
+                            <input class="form-control" placeholder="CPF" type="text" id="cpf" name="cpf" [(ngModel)]="cliente.cpf" placeholder="999.999.999-99" maxlength="14"
+                            pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required appCpfFormat (keyup)="verificarCPF()" (ngModelChange)="resetarValidacaoCPF()"/>
+                            <!-- <button class="btn btn-primary mt-2" type="button" (keyup)="verificarCPF()">Verificar CPF</button>                        -->
+                            <div class="mt-2" [ngClass]="cpfValido ? 'alert alert-success' : 'alert alert-danger'" role="alert" *ngIf="mensagemCPF">
+                                {{ mensagemCPF }}
+                            </div>
+                        </div>
+
+                        <div class="form-outline form-white mb-3">
+                            <label class="form-label" for="telefone">Telefone</label>
+                            <input class="form-control" type="text" id="telefone" name="telefone" [(ngModel)]="cliente.telefone"
+                                placeholder="(00) 00000-0000" maxlength="15" pattern="\([0-9]{2}\) [0-9]{5}-[0-9]{4}" required
+                                appTelefoneFormat />
+                        </div>
+                        
+                        <div class="form-outline form-white mb-3">
+                            <label class="form-label" for="cep">CEP</label>
+                            <input class="form-control" type="text" id="cep" name="cep" [(ngModel)]="cliente.endereco.cep" placeholder="99999-999"
+                            maxlength="9" appCepFormat required>
+                            <button class="btn btn-primary mt-2" type="button" (click)="buscarEndereco()">Buscar CEP</button>
+                        </div>
+
+                        <div *ngIf="isCepSet">
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="enderecoTipo">Tipo de Endereço:</label>
+                                <input class="form-control" type="text" id="enderecoTipo" name="enderecoTipo" 
+                                    [(ngModel)]="cliente.endereco.tipo" [disabled]="!isCepSet">
+                            </div>
+
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="logradouro">Logradouro:</label>
+                                <input class="form-control" type="text" id="logradouro" name="logradouro" 
+                                    [(ngModel)]="cliente.endereco.logradouro" [disabled]="!isCepSet">
+                            </div>
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="numero">Número:</label>
+                                <input class="form-control" type="text" id="numero" name="numero" required [(ngModel)]="cliente.endereco.numero" [disabled]="!isCepSet">
+                            </div>
+
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="complemento">Complemento:</label>
+                                <input class="form-control" type="text" id="complemento" name="complemento" [(ngModel)]="cliente.endereco.complemento" [disabled]="!isCepSet">
+                            </div>
+
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="cidade">Cidade:</label>
+                                <input class="form-control" type="text" id="cidade" name="cidade"  [(ngModel)]="cliente.endereco.cidade" [disabled]="!isCepSet">
+                            </div>
+
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="estado">Estado:</label>
+                                <input class="form-control" type="text" id="estado" name="estado" [(ngModel)]="cliente.endereco.estado" [disabled]="!isCepSet">
+                            </div>
+
+                            <div class="form-outline form-white mb-3">
+                                <label class="form-label" for="salario">Salário:</label>
+                                <input class="form-control" type="text" id="salario" currencyMask name="salario" [(ngModel)]="cliente.salario"
+                                [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" required>
+                            </div>
+                        
+                        </div>
+
+                        <div class="form-outline form-white mb-2 text-center">
+                            <button class="btn btn-outline-light mb-2" type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario <= 0">Cadastrar</button>
+                            <p>Já tem cadastro? <a routerLink="/">Entrar</a></p>
+                        </div>
+                    </div>
+                </form>
+              <div>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-
-</html>
+  </section>
