altera-perfil e umas diretivas

--- a/src/app/cliente/deposita/deposita.component.html
+++ b/src/app/cliente/deposita/deposita.component.html
@@ -26,7 +26,7 @@
     </form>
   </div>
   <div *ngIf="!conta">
-    <div class="d-flex align-items-center">
+    <div class="d-flex align-items-center vh-100">
       <strong role="status">
         <div class="spinner-border ms-3" style="width: 3rem; height: 3rem;" aria-hidden="true"></div>
       </strong>
