--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -1,4 +1,4 @@
-<section class="vh-100 gradient-custom">
+<section class="vh-90 gradient-custom">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -83,8 +83,8 @@
                         </div>
 
                         <div class="form-outline form-white mb-2 text-center">
-                            <button class="btn btn-outline-light mb-2" type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario <= 0">Cadastrar</button>
-                            <p>Já tem cadastro? <a routerLink="/">Entrar</a></p>
+                            <button class="btn btn-outline-light " type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario <= 0">Cadastrar</button>
+                            <p class="mt-3">Já tem cadastro? <a routerLink="/">Entrar</a></p>
                         </div>
                     </div>
                 </form>
