R13: Consultar Cliente + bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" routerLink="/transf">Tranferência</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="">Extrato</a>
+                    <a class="nav-link" routerLink="/extrato">Extrato</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/alterarperfil">Alterar Perfil</a>
