--- a/src/app/gerente/pesquisar-cliente/pesquisar-cliente.component.html
+++ b/src/app/gerente/pesquisar-cliente/pesquisar-cliente.component.html
@@ -2,7 +2,7 @@
   <h2>Cliente Detalhado</h2>
   <div class="input-group mt-4">
     <input type="text" class="form-control" [(ngModel)]="consulta" placeholder="Pesquisar por nome ou CPF">
-    <button class="btn btn-primary" (click)="listarTodos()">Buscar</button>
+    <button class="btn btn-dark" (click)="listarTodos()">Buscar</button>
   </div>
 
   <div class="table-responsive mt-4">
